terraform/modules/service/vpc/aws_internet_gateway.tf
# aws_internet_gateway
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name        = "${var.prefix}-${var.environment}"
    Environment = var.environment
  }
}
